[package]
name = "cargo-mirage"
version = "0.1.0"
authors = ["Sam De Roeck <sadroeck@gmail.com>"]

[dependencies]
futures = "0.1.x"
actix = "0.5.x"
toml = "0.4.x"
serde = "1.0.x"
serde_derive = "1.0.x"
clap = "2.31.x"
git2 = "0.7.x"
reqwest = "0.8.x"
futures-cpupool = "0.1.x"
glob = "0.2"
serde_json = "1.0.x"

[dependencies.actix-web]
version = "0.6.x"
features = ["alpn"]
